refactor: restructure project architecture